--- a/client/app/scripts/superdesk-highlights/styles/highlights.less
+++ b/client/app/scripts/superdesk-highlights/styles/highlights.less
@@ -53,11 +53,14 @@
 			color: #a7a7a7;
 		}
 		button {
+                        position: absolute;
+                        right: 7px;
 			color: #656565;
 		}
 		li {
 			height: 1%;
 			overflow: hidden;
+                        padding-right: 45px;
 		}
 	}
 	&:hover {
